--- a/about/index.html
+++ b/about/index.html
@@ -60,7 +60,7 @@
       
     </div>
     <footer class="article-footer">
-      <a data-url="http://yoursite.com/about/index.html" data-id="ck2k52ckk00014xsovss4dohk"
+      <a data-url="http://yoursite.com/about/index.html" data-id="ck2u7qdf600018bsorvaqlien"
          class="article-share-link">分享</a>
       
     </footer>
@@ -94,7 +94,7 @@
       <li>Theme  <a href="https://github.com/zhwangart/hexo-theme-ocean">Ocean</a></li>
       <li>
       	<img src="https://static.dy208.cn/o_1dfilp8ruo521thr1hvf18ji17soa.png">
-		<a href="http://www.beian.miit.gov.cn/"  style="color:#f72b07" target="_blank">陇ICP备19003991号-1</a>
+		<a href="http://www.beian.miit.gov.cn/"  style="color:#127ea9" target="_blank">陇ICP备19003991号-1</a>
       </li>
     </ul>
   </div>
