--- a/gallery/index.html
+++ b/gallery/index.html
@@ -54,13 +54,13 @@
   <div class="justified-gallery" id="gallery">
   
       <div>
-        <a class="fancybox" data-fancybox="images" data-caption="漫画" href="https://th.wallhaven.cc/small/83/839kvo.jpg" rel="gallery_ck2u7qdf900038bso6ipg6htq" title="漫画">
+        <a class="fancybox" data-fancybox="images" data-caption="漫画" href="https://th.wallhaven.cc/small/83/839kvo.jpg" rel="gallery_ck2u8h45200033vsodbvirzfu" title="漫画">
           <img src="https://th.wallhaven.cc/small/83/839kvo.jpg" itemprop="image" alt="漫画">
         </a>
       </div>
   
       <div>
-        <a class="fancybox" data-fancybox="images" data-caption="女王" href="https://th.wallhaven.cc/small/6k/6kyk9w.jpg" rel="gallery_ck2u7qdf900038bso6ipg6htq" title="女王">
+        <a class="fancybox" data-fancybox="images" data-caption="女王" href="https://th.wallhaven.cc/small/6k/6kyk9w.jpg" rel="gallery_ck2u8h45200033vsodbvirzfu" title="女王">
           <img src="https://th.wallhaven.cc/small/6k/6kyk9w.jpg" itemprop="image" alt="女王">
         </a>
       </div>
@@ -76,7 +76,7 @@
       
     </div>
     <footer class="article-footer">
-      <a data-url="http://yoursite.com/gallery/index.html" data-id="ck2u7qdf900038bso6ipg6htq"
+      <a data-url="http://www.polaris.com/gallery/index.html" data-id="ck2u8h45200033vsodbvirzfu"
          class="article-share-link">分享</a>
       
     </footer>
@@ -109,7 +109,6 @@
       <li>Powered by <a href="http://hexo.io/" target="_blank">Hexo</a></li>
       <li>Theme  <a href="https://github.com/zhwangart/hexo-theme-ocean">Ocean</a></li>
       <li>
-      	<img src="https://static.dy208.cn/o_1dfilp8ruo521thr1hvf18ji17soa.png">
 		<a href="http://www.beian.miit.gov.cn/"  style="color:#127ea9" target="_blank">陇ICP备19003991号-1</a>
       </li>
     </ul>
